llvm-toolchain-4.0 (1:4.0-5) unstable; urgency=medium

  * Prepare version 4.0.1

 --

llvm-toolchain-4.0 (1:4.0-4) unstable; urgency=medium

  * Limit the archs where the ocaml binding is built
    Should fix the FTBFS
    Currently amd64 arm64 armel armhf i386

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 15 Apr 2017 12:03:30 +0200

llvm-toolchain-4.0 (1:4.0-3) unstable; urgency=medium

  * Explicit the dep of clang-tidy on same version of llvm to avoid
    undefined symbols
  * Add override_dh_makeshlibs for the libllvm or liblldb versions
    Thanks to Julien Cristau for the patch
  * change the min version of the libclang1 symbols to 1:4.0-3~
  * Add override_dh_makeshlibs for the libllvm or liblldb versions
    Thanks to Julien Cristau for the patch
  * Fix the symlink on scan-build-py

  [ Rebecca N. Palmer ]
  * Use versioned symbols (Closes: #848368)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 09 Apr 2017 10:11:56 +0200

llvm-toolchain-4.0 (1:4.0-2) unstable; urgency=medium

  * Fix the incorrect symlink to scan-build-py (Closes: #856869)
  * Explicit the dep of clang-format on same version of llvm to avoid
    undefined symbols
  * Try to ignore also libclang_rt.asan-*.so for the dep generation
    (Closes: #854965)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 12 Mar 2017 10:01:46 +0100

llvm-toolchain-4.0 (1:4.0-1) unstable; urgency=medium

  * New upstream release

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 09 Mar 2017 07:51:53 +0100

llvm-toolchain-4.0 (1:4.0~+rc4-1) unstable; urgency=medium

  * New testing release

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 08 Mar 2017 08:52:37 +0100

llvm-toolchain-4.0 (1:4.0~+rc3-1) unstable; urgency=medium

  * New testing release
  * Fix the C++ include path order (Closes: #855222)
    Many thanks to Jason Rhinelander for investigating

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 18 Feb 2017 17:54:01 +0100

llvm-toolchain-4.0 (1:4.0~+rc2-1) unstable; urgency=medium
